# rocq-git

./: README.md  _RocqProject  dune-project  rocq-git.opam
rocqgit/lib/: dune  init.ml  init.mli  logging.ml  pstring.ml  uint63.ml  utils.ml
rocqgit/lib/extr/: hash.ml  hash.mli  init.ml  init.mli
theories/: OCamlTypes.v  dune  endpoints.v  extract.v  monads.v  repo.v  sha1.v
